--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jesus Joaquin
-#logo:
+logo: /assets/Foto2.jpg
 description: Data Analyst | Data Engineer | Mechatronic Engineer
 show:downloads: true
 theme: jekyll-theme-minimal
